--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,10 +1,18 @@
 <html>
   <head>
-    <title>Tracker Config and Guiding</title>
+    <title>Video Streaming Demonstration</title>
   </head>
   <body>
-
-    <h1>Video Stream</h1>
-    <img id="bg" src="{{ url_for('video_feed') }}">
+  
+  <form action="/changeSettings" method="post">
+            {{ form.csrf }}
+<div class="input text">
+                {{ form.speed.label }} {{ form.speed }}</div>
+<div class="input submit">
+                <input type="submit" value="Update"></div>
+</form>
+  
+    <h1>Video Streaming Demonstration</h1>
+    <img src="{{ url_for('video_feed') }}">
   </body>
 </html>
