added image saving

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,6 +8,9 @@
             {{ form.csrf }}
 <div class="input text">
                 {{ form.speed.label }} {{ form.speed }}</div>
+<div class="checkbox">
+        {{ form.save.label }} {{ form.save }} </div>
+        
 <div class="input submit">
                 <input type="submit" value="Update"></div>
 </form>
