sub image shows tracking area

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -17,5 +17,6 @@
   
     <h1>Video Streaming Demonstration</h1>
     <img src="{{ url_for('video_feed') }}">
+    <img src="{{ url_for('subimg_video_feed') }}">
   </body>
 </html>
