--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -10,6 +10,10 @@
 	            {{ camSettingsForm.csrf }}
 	<div class="input text">
 	                {{ camSettingsForm.speed.label }} {{ camSettingsForm.speed }}</div>
+
+	<div class="input text">
+	                {{ camSettingsForm.visual_gain.label }} {{ camSettingsForm.visual_gain }}</div>
+
 	<div class="checkbox">
 	        {{ camSettingsForm.save.label }} {{ camSettingsForm.save }} </div>
 	        
