debugged and working on pi. added tracking path overlay

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -16,6 +16,9 @@
 
 	<div class="checkbox">
 	        {{ camSettingsForm.save.label }} {{ camSettingsForm.save }} </div>
+            
+	            <div class="checkbox">
+            {{ camSettingsForm.overlay_tracking_history.label }} {{ camSettingsForm.overlay_tracking_history }} </div>
 	        
 	<div class="input submit">
 	                <input type="submit" value="Update"></div>
