stop/start motor

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -36,6 +36,18 @@
 	</form>
 
 
+	
+	<form action="/enable_movement" method="post">
+			<div class="input submit">
+				<input type="submit" value= "Enable Movement" ></div>
+	</form>
+
+	<form action="/disable_movement" method="post">
+			<div class="input submit">
+				<input type="submit" value= "Disable Movement" ></div>
+	</form>
+
+
   </div>
   <div style='margin-left:404px'>
     <img src="{{ url_for('subimg_video_feed') }}">
