starting to write actual tracking

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -48,6 +48,18 @@
 	</form>
 
 
+	
+	<form action="/start_following" method="post">
+			<div class="input submit">
+				<input type="submit" value= "Start Following" ></div>
+	</form>
+
+	<form action="/stop_following" method="post">
+			<div class="input submit">
+				<input type="submit" value= "Stop Following" ></div>
+	</form>
+
+
   </div>
   <div style='margin-left:404px'>
     <img src="{{ url_for('subimg_video_feed') }}">
