wrote a basic tracking alg

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -51,12 +51,12 @@
 	
 	<form action="/start_following" method="post">
 			<div class="input submit">
-				<input type="submit" value= "Start Following" ></div>
+				<input type="submit" value= "Start Guiding" ></div>
 	</form>
 
 	<form action="/stop_following" method="post">
 			<div class="input submit">
-				<input type="submit" value= "Stop Following" ></div>
+				<input type="submit" value= "Stop Guiding" ></div>
 	</form>
 
 
