--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,13 +2,20 @@
   <head>
     <title>Video Streaming Demonstration</title>
 
-	<!--<script type="text/javascript" src="jquery-1.7.1.min.js"></script> -->
 	<script type="text/javascript" src="{{url_for('static', filename='jquery-1.7.1.min.js') }}"></script>
+	<script type="text/javascript" src="{{url_for('static', filename='canvasjs.min.js') }}"></script>
 
-	
 	<script>
-	function update_values() {
-            $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+
+
+		window.onload = function () {
+
+
+		previousErrorUpdateTime = "";
+		previousShiftUpdateTime = "";
+
+		function update_values() {
+	        $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
             $.getJSON($SCRIPT_ROOT+"/updates",
                 function(data) {
                    
@@ -29,10 +36,130 @@
 
                 	elem = document.getElementById('NewLogs')
 				    elem.scrollTop = elem.scrollHeight;
+
+
+				    shiftUpdateTime = data.ShiftUpdateTime
+				    if(data.ShiftX != "None") {
+				    	if(previousShiftUpdateTime != shiftUpdateTime) {
+				    		shiftX = parseFloat(data.ShiftX);
+				    		shiftY = parseFloat(data.ShiftY);
+				    		updateShiftChart(shiftX, shiftY);
+				    		previousShiftUpdateTime = shiftUpdateTime;
+				    	}
+				    }
+
+
+				    errorUpdateTime = data.ErrorUpdateTime
+				    if(data.ParallelError != "None") {
+				    	if(previousErrorUpdateTime != errorUpdateTime) {
+				    		parErr = parseFloat(data.ParallelError);
+				    		orthErr = parseFloat(data.OrthogonalError);
+				    		updateErrorChart(parErr, orthErr);
+				    		previousErrorUpdateTime = errorUpdateTime;
+				    	}
+				    }
+
                 });
         }
 
-        setInterval(update_values, 500);
+
+		var dataLength = 500; // number of dataPoints visible at any point
+
+		var dpsParallel = [];
+		var dpsOrthogonal = [];
+
+		var errorChart = new CanvasJS.Chart("errorChartContainer", {
+			title :{
+				text: "Errors"
+			},
+			axisY: {
+				includeZero: true
+			},      
+			data: [{
+				type: "line",
+				showInLegend : true,
+				legendText : "Parallel",
+				dataPoints: dpsParallel
+			}, {
+				type: "line",
+				showInLegend : true,
+				legendText : "Orthogonal",
+				dataPoints: dpsOrthogonal
+			}]
+		});
+
+		var tError = 0;
+		var updateErrorChart = function (parallel, orthogonal) {
+			dpsParallel.push({x:tError, y:parallel});
+			dpsOrthogonal.push({x:tError, y:orthogonal});
+			tError++;
+
+			if (dpsParallel.length > dataLength) {
+				dpsParallel.shift();
+			}
+
+			if (dpsOrthogonal.length > dataLength) {
+				dpsOrthogonal.shift();
+			}
+
+			errorChart.render();
+		};
+
+
+
+		var dpsShiftX = [];
+		var dpsShiftY = [];
+
+		var shiftChart = new CanvasJS.Chart("shiftChartContainer", {
+			title :{
+				text: "Shifts"
+			},
+			axisY: [{
+				title : "X", 
+				includeZero: false
+			}, {
+				title : "Y", 
+				includeZero: false
+			}
+			],      
+			data: [{
+				type: "line",
+				axisYIndex : 0, 
+				showInLegend : true,
+				legendText : "X",
+				dataPoints: dpsShiftX
+			}, {
+				type: "line",
+				axisYIndex : 1, 
+				showInLegend : true,
+				legendText : "Y",
+				dataPoints: dpsShiftY
+			}]
+		});
+
+		var tShift = 0;
+		var updateShiftChart = function (shiftX, shiftY) {
+
+			dpsShiftX.push({x:tShift, y:shiftX});
+			dpsShiftY.push({x:tShift, y:shiftY});
+			tShift++;
+
+			if (dpsShiftX.length > dataLength) {
+				dpsShiftX.shift();
+			}
+
+			if (dpsShiftY.length > dataLength) {
+				dpsShiftY.shift();
+			}
+
+			shiftChart.render();
+		};
+
+
+        setInterval(update_values, 1000);
+		}
+
+
 	</script>
   </head>
   <body>
@@ -122,5 +249,10 @@
   <div style="margin-top:10px; width:100%">
     <img src="{{ url_for('video_feed') }}">
 </div>
+
+<div id="errorChartContainer" style="height: 370px; width:700px;"></div>
+<div id="shiftChartContainer" style="height: 370px; width:700px;"></div>
+	
+
   </body>
 </html>
