--- a/pi-tracker2/src/templates/index.html
+++ b/pi-tracker2/src/templates/index.html
@@ -298,14 +298,13 @@
 
 
   </div>
+  <div style='margin-left:404px'>
+    <img src="{{ url_for('subimg_video_feed') }}">
+  </div>
 </div>
   
   <div style="margin-top:10px; width:100%">
     <img src="{{ url_for('video_feed') }}">
-</div>
-
-  <div style="margin-top:10px; width:100%">
-    <img src="{{ url_for('subimg_video_feed') }}">
 </div>
 
 <div id="errorChartContainer" style="height: 370px; width:700px;"></div>
